salesforce_app/force-app/main/default/objects/Course_Syllabus__c/Course_Syllabus__c.object-meta.xml
<CustomObject>
    <label>Course Syllabus</label>
    <nameField>
        <displayFormat>SYL-{0000}</displayFormat>
        <label>Syllabus ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Syllabus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>