salesforce_app/force-app/main/default/objects/Course_Syllabus__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <label>Course Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>