salesforce_app/force-app/main/default/objects/Course_Syllabus__c/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <label>Module Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>