salesforce_app/force-app/main/default/objects/Course_Syllabus__c/fields/Topic_Name__c.field-meta.xml
<CustomField>
    <fullName>Topic_Name__c</fullName>
    <label>Topic Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>