salesforce_app/force-app/main/default/objects/Course_Syllabus__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Name__c</columns>
    <columns>Module_Name__c</columns>
    <columns>Topic_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>